[project]
name = "zephyr"
version = "0.1.0.dev"
description = "Zephyr Build System Python Environment"
requires-python = ">=3.11"
dependencies = [
"anytree>=2.13.0",
"canopen>=2.4.1",
"intelhex>=2.3.0",
"packaging>=25.0",
"patool>=2.0.0",
"psutil>=5.6.6",
"pyelftools>=0.29",
"pykwalify>=1.8.0",
"pylink-square>=1.0,<2.0",
"pyserial>=3.5",
"pyyaml>=6.0",
"requests>=2.32.4",
"reuse>=5.1.1",
"semver>=3.0.4",
"tqdm>=4.67.1",
"west>=0.14.0",
"windows-curses>=2.4.1 ; sys_platform == 'win32'",
]

[dependency-groups]
actions = [
"anytree",
"awscli",
"canopen",
"clang-format>=15.0.0",
"elasticsearch<9",
"exceptiongroup>=1.0.0rc8",
"gcovr==6.0",
"gitlint-core>=0.19.1",
"gitpython>=3.1.41",
"ijson",
"intelhex",
"junit2html",
"junitparser>=4.0.1",
"mypy",
"natsort",
"ply>=3.10",
"psutil>=5.6.6",
"pyelftools>=0.29",
"pygithub>=2.7.0",
"pykwalify",
"pylint>=3",
"pyserial",
"pytest",
"python-dotenv",
"python-magic ; sys_platform != 'win32'",
"python-magic-bin ; sys_platform == 'win32'",
"pyyaml>=5.4",
"reuse",
"ruff==0.11.11",
"setuptools>=70.2.0",
"spdx-tools",
"sphinx-lint",
"tabulate",
"tox",
"tqdm>=4.67.1",
"unidiff",
"vermin",
"west>=0.14.0",
"xlsxwriter",
"yamllint",
]
build-test = [
"colorama>=0.4.6",
"coverage>=7.10.6",
"gcovr>=6.0",
"junitparser>=3.0.0",
"mypy>=1.18.2",
"ply>=3.10",
"pytest>=8.4.2",
"python-dotenv>=1.1.1",
]
compliance = [
"clang-format>=15.0.0",
"gitlint-core>=0.19.1",
"junitparser>=4.0.1",
"lxml>=5.3.0",
"pykwalify>=1.8.0",
"pylint>=3",
"python-dotenv>=1.1.1",
"python-magic>=0.4.27 ; sys_platform != 'win32'",
"python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
"ruff==0.11.11",
"sphinx-lint>=1.0.0",
"unidiff>=0.7.5",
"vermin>=1.6.0",
"yamllint>=1.37.1",
]
docs = [
"anytree>=2.13.0",
"coverxygen>=1.8.1",
"doxmlparser>=1.14.0",
"pygments>=2.9,!=2.19.0",
"pykwalify>=1.8.0",
"pyserial>=3.5",
"pytest>=8.4.2",
"pyyaml>=6.0",
"sphinx<8.3.0",
"sphinx-autobuild>=2025.8.25",
"sphinx-copybutton>=0.5.2",
"sphinx-notfound-page>=1.1.0",
"sphinx-rtd-theme~=3.0",
"sphinx-sitemap>=2.8.0",
"sphinx-tabs>=3.4.7",
"sphinx-togglebutton>=0.3.2",
"sphinxcontrib-programoutput>=0.18",
"sphinxcontrib-svg2pdfconverter>=1.3.0",
]
extras = [
"anytree>=2.13.0",
"gitlint-core>=0.19.1",
"gitpython>=3.1.41",
"graphviz>=0.21",
"junit2html>=31.0.2",
"lpc-checksum>=3.0.0",
"pillow>=10.3.0",
"plotly>=6.3.0",
"pygithub>=2.8.1",
"spsdk>=3.0.0",
]
run-test = [
"cbor>=1.0.0",
"natsort>=8.4.0",
"numpy>=1.26.4",
"opencv-python>=4.9.0.80",
"psutil>=5.6.6",
"pyocd>=0.35.0",
"python-can>=4.3.0",
"spdx-tools>=0.8.3",
"tabulate>=0.9.0",
]
west = ["west==1.4.0"]
